@@ -1,0 +1,2 @@
+
+(theme.print "This is from xxx.ewt\n")
